scss/components/_sharer.scss
/** =========================================
 * Sharer
 ===========================================*/

.sharer {
    &__form {
        background: transparent none;
        height: auto;
        border-width: 0;
        width: 100%;
        font-size: $font-size-lg;
        @include margin;
    }
    &__list {
        padding: 0;
        @include margin;
        &__item {
            display: inline-block;
            list-style: none;
            margin: 0;
            padding-right: $gap-md;
            &--last {
                padding-right: 0;
            }
            &__link {
                display: block;
                line-height: 1em;
                &__icon {
                    $icon-size: 36px;
                    height: $icon-size;
                    width: $icon-size;
                    @include media-sm {
                        height: $icon-size * 1.5;
                        width: $icon-size * 1.5;
                    }
                    &:hover {
                        path,
                        ellipse {
                            @include media-sm {
                                fill: $brand-primary;
                            }
                        }
                    }
                    path,
                    ellipse {
                        fill: $font-color-base;
                        transition: $transition-default fill;
                    }
                }
            }
        }
    }
}

